ci: fix labeler adding style on refactor

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -75,7 +75,7 @@ labels:
 
   - label: 't-style'
     matcher:
-      title: "^refactor(\\(.+\\))?!?: .*"
+      title: "^style(\\(.+\\))?!?: .*"
 
   - label: 't-test'
     matcher:
