ci: do not run on website changes Also removed the sync repo workflow since we do not use the sites repo actively anymore.

--- a/.github/workflows/lib-check.yml
+++ b/.github/workflows/lib-check.yml
@@ -2,9 +2,13 @@ name: Library Checks
 
 on:
   pull_request:
+    paths-ignore:
+      - 'website/**'
   push:
     branches:
       - main
+    paths-ignore:
+      - 'website/**'
   merge_group:
 
 jobs:
