--- a/proxies/rest/.yarnrc.yml
+++ b/proxies/rest/.yarnrc.yml
@@ -1,3 +1,1 @@
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
+nodeLinker: node-modules
