--- a/.github/workflows/rest-proxy.yml
+++ b/.github/workflows/rest-proxy.yml
@@ -5,9 +5,11 @@ on:
     branches:
       - "main"
     paths:
+      - ".github/workflows/rest-proxy.yml"
       - "proxies/rest/**"
   pull_request:
     paths:
+      - ".github/workflows/rest-proxy.yml"
       - "proxies/rest/**"
 
 jobs:
