--- a/.github/workflows/rest-proxy.yml
+++ b/.github/workflows/rest-proxy.yml
@@ -16,9 +16,6 @@ jobs:
   build:
     name: Build docker image
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./proxies/rest
     steps:
       - uses: actions/checkout@v3
       - name: Set up QEMU
@@ -30,3 +27,4 @@ jobs:
         with:
           push: false
           tags: discordeno/rest-proxy:latest
+          context: proxies/rest
