ci(rest-proxy): add target

--- a/.github/workflows/rest-proxy.yml
+++ b/.github/workflows/rest-proxy.yml
@@ -28,3 +28,4 @@ jobs:
           push: false
           tags: discordeno/rest-proxy:latest
           context: proxies/rest
+          target: runner
