--- a/.github/workflows/rest-proxy.yml
+++ b/.github/workflows/rest-proxy.yml
@@ -29,7 +29,7 @@ jobs:
           tags: discordeno/rest-proxy:latest
           context: proxies/rest
           target: runner
-          outputs: type=docker,dest=/tmp/myimage.tar
+          outputs: type=docker,dest=/tmp/rest-proxy-image.tar
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
