--- a/.github/workflows/rest-proxy.yml
+++ b/.github/workflows/rest-proxy.yml
@@ -73,3 +73,4 @@ jobs:
           context: proxies/rest
           push: true
           tags: "ghcr.io/discordeno/rest-proxy:latest"
+          platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le
