--- a/.github/workflows/rest-proxy.yml
+++ b/.github/workflows/rest-proxy.yml
@@ -11,6 +11,8 @@ on:
     paths:
       - ".github/workflows/rest-proxy.yml"
       - "proxies/rest/**"
+  schedule:
+    - cron: "0 0 * * *"
 
 jobs:
   build:
@@ -75,10 +77,26 @@ jobs:
           ignore-unfixed: true
           vuln-type: "os,library"
           severity: "UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL"
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        if: ${{ github.event_name == "schedule" }}
+        with:
+          image-ref: "discordeno/rest-proxy:latest"
+          exit-code: "0"
+          vuln-type: "os,library"
+          severity: "UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL"
+          format: "sarif"
+          output: "trivy-results.sarif"
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        if: ${{ github.event_name == "schedule" }}
+        with:
+          sarif_file: "trivy-results.sarif"
 
   build-all-arch:
     name: Build image for all architectures
     needs: build
+    if: ${{ github.event_name != "schedule" }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -116,7 +134,7 @@ jobs:
   publish:
     name: Publish image
     needs: build-all-arch
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
