ci(bench): fix benchmark result not saved for pr

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -62,7 +62,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ./benchmarksResult
-          key: ${{ github.ref }}-benchmark
+          key: ${{ github.ref }}-benchmark-${{ github.sha }}
+          restore-keys: |
+            ${{ github.ref }}-benchmark-
       - name: Store benchmark result to cache
         if: ${{ steps.cpuCheck.outputs.match == 'true' }}
         uses: benchmark-action/github-action-benchmark@v1
