--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -26,8 +26,7 @@
   "dependencies": {
     "@discordeno/types": "19.0.0-alpha.1",
     "@discordeno/utils": "19.0.0-alpha.1",
-    "dotenv": "^16.0.3",
-    "node-fetch": "^3.3.1"
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
