test: bun test (#2798)
* test: bun test

* Update package.json

* ci: update bun version

* Update package.json

* Update package.json

* test

* ci: update bun

* chore(ci): update bun version

---------

Co-authored-by: H01001000 <heiheiho000@gmail.com>

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:unit": "turbo run test:unit",
     "test:integration": "turbo run test:integration",
     "test:deno-unit": "turbo run test:deno-unit",
+    "test:bun-unit": "turbo run test:bun-unit",
     "test:e2e": "turbo run test:e2e",
     "test:test-type": "turbo run test:test-type",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
