--- a/.github/workflows/other-runtime-unit-test.yml
+++ b/.github/workflows/other-runtime-unit-test.yml
@@ -52,3 +52,39 @@ jobs:
             ${{ runner.os }}-deno-${{ inputs.package }}
       - name: Deno Unit Test
         run: yarn test:deno-unit --cache-dir=".turbo" --filter=./packages/${{ inputs.package }}
+  bun-unit-test:
+    name: Bun Unit Test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: "1.0.6"
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
+      - uses: actions/cache@v3
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - run: yarn install --immutable
+      - name: Turbo Cache
+        id: turbo-cache
+        uses: actions/cache@v3
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-test:bun-unit-${{ inputs.package }}-${{ github.sha }}
+      - name: Build dist cache
+        if: steps.turbo-cache.outputs.cache-hit != 'true'
+        uses: actions/cache@v3
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-build-${{ github.sha }}
+      - name: Bun Unit Test
+        run: yarn test:bun-unit --cache-dir=".turbo" --filter=./packages/${{ inputs.package }}
+        timeout-minutes: 1
