--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "fmt": "turbo run fmt",
-    "build:type": "turbo run build:type",
-    "release-build": "turbo run release-build",
-    "dev": "turbo run dev --parallel",
-    "lint": "turbo run lint",
-    "test:type": "turbo run build:type",
-    "test:unit-coverage": "turbo run test:unit-coverage",
-    "test:unit": "turbo run test:unit",
-    "test:integration": "turbo run test:integration",
-    "test:deno-unit": "turbo run test:deno-unit",
-    "test:bun-unit": "turbo run test:bun-unit",
-    "test:e2e": "turbo run test:e2e",
-    "test:test-type": "turbo run test:test-type",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "prepare": "husky install",
     "build:doc": "typedoc --out ./website/docs/generated/ && node scripts/finalizeTypedocs.js",
-    "setup-dd": "husky install"
+    "build:type": "turbo run build:type",
+    "dev": "turbo run dev --parallel",
+    "fmt": "turbo run fmt",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "lint": "turbo run lint",
+    "prepare": "husky install",
+    "release-build": "turbo run release-build",
+    "setup-dd": "husky install",
+    "test:bun-unit": "turbo run test:bun-unit",
+    "test:deno-unit": "turbo run test:deno-unit",
+    "test:e2e": "turbo run test:e2e",
+    "test:integration": "turbo run test:integration",
+    "test:test-type": "turbo run test:test-type",
+    "test:type": "turbo run build:type",
+    "test:unit": "turbo run test:unit",
+    "test:unit-coverage": "turbo run test:unit-coverage"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
