--- a/website/package.json
+++ b/website/package.json
@@ -14,7 +14,8 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
     "lint": "eslint src --ext ts,tsx",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,mdx}\""
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,mdx}\"",
+    "setup-dd": ""
   },
   "dependencies": {
     "@babel/plugin-syntax-flow": "^7.18.6",
