fix(eslint-config): add prettier plugin and upgrade prettier

--- a/packages/eslint-config-discordeno/package.json
+++ b/packages/eslint-config-discordeno/package.json
@@ -11,6 +11,7 @@
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-require-extensions": "^0.1.2",
     "typescript": "^4.9.5"
