fix: various background task issues

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,23 +8,12 @@
       "args": ["run", "build:watch"],
       "isBackground": true,
       "presentation": {
-        "reveal": "silent",
+        "reveal": "always",
         "panel": "dedicated"
       },
       "runOptions": {
         "runOn": "folderOpen",
         "instanceLimit": 1
-      },
-      "problemMatcher": {
-        "owner": "typescript",
-        "source": "tsc",
-        "applyTo": "closedDocuments",
-        "fileLocation": "absolute",
-        "pattern": "$tsc",
-        "background": {
-          "beginsPattern": "\\s*Starting compilation in watch mode\\s*",
-          "endsPattern": "\\s*Compilation complete\\s*"
-        }
       }
     }
   ]
