feat: add after install script (#3161)
* feat: upgrade yarn to latest 3.x

* feat: adding plugin and after install script

* fix: husky mode

* feat: adding post merge hook

* style: alphabetically organizing scripts

* fix: yarn lock

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,5 +5,9 @@ plugins:
     spec: '@yarnpkg/plugin-typescript'
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: '@yarnpkg/plugin-interactive-tools'
+  - path: .yarn/plugins/@yarnpkg/plugin-after-install.cjs
+    spec: 'https://raw.githubusercontent.com/mhassan1/yarn-plugin-after-install/v0.5.0/bundles/@yarnpkg/plugin-after-install.js'
 
-yarnPath: .yarn/releases/yarn-3.3.0.cjs
+yarnPath: .yarn/releases/yarn-3.6.4.cjs
+
+afterInstall: yarn run setup-dd
