--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,8 +1,7 @@
 name: Feature Request
 description: Suggest an idea for this project
 title: '[Feat]: '
-# TODO: someone needs to come back and update this
-labels: []
+labels: ['t-feat']
 body:
   - type: markdown
     attributes:
