--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,7 @@
   "editor.tabSize": 2,
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
-  "editor.codeActionsOnSave": {
-    "source.organizeImports": true,
-    "source.fixAll.eslint": true
-  },
+  "editor.codeActionsOnSave": ["source.organizeImports", "source.fixAll.eslint"],
   "eslint.validate": ["typescript", "javascript"],
   "files.associations": {
     "*.ts": "typescript",
