--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "turbo run build",
+    "build": "turbo run build --no-daemon",
     "build:watch": "echo \"Starting build in watch mode...\" && chokidar \"packages/**/*.ts\" --ignore \"packages/**/dist/**/*.d.ts\"  -c \"yarn run build && yarn run build:type\"",
     "build:doc": "typedoc --out ./website/docs/generated/ && node scripts/finalizeTypedocs.js",
-    "build:type": "turbo run build:type",
-    "dev": "turbo run dev --parallel",
-    "fmt": "turbo run fmt",
+    "build:type": "turbo run build:type --no-daemon",
+    "dev": "turbo run dev --parallel --no-daemon",
+    "fmt": "turbo run fmt --no-daemon",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "lint": "turbo run lint",
+    "lint": "turbo run lint --no-daemon",
     "prepare": "husky install",
-    "release-build": "turbo run release-build",
+    "release-build": "turbo run release-build --no-daemon",
     "setup-dd": "husky install",
-    "test:bun-unit": "turbo run test:bun-unit",
-    "test:deno-unit": "turbo run test:deno-unit",
-    "test:e2e": "turbo run test:e2e",
-    "test:integration": "turbo run test:integration",
-    "test:test-type": "turbo run test:test-type",
-    "test:type": "turbo run build:type",
-    "test:unit": "turbo run test:unit",
-    "test:unit-coverage": "turbo run test:unit-coverage"
+    "test:bun-unit": "turbo run test:bun-unit --no-daemon",
+    "test:deno-unit": "turbo run test:deno-unit --no-daemon",
+    "test:e2e": "turbo run test:e2e --no-daemon",
+    "test:integration": "turbo run test:integration --no-daemon",
+    "test:test-type": "turbo run test:test-type --no-daemon",
+    "test:type": "turbo run build:type --no-daemon",
+    "test:unit": "turbo run test:unit --no-daemon",
+    "test:unit-coverage": "turbo run test:unit-coverage --no-daemon"
   },
   "devDependencies": {
     "chokidar-cli": "^3.0.0",
