--- a/packages/gateway/.swcrc
+++ b/packages/gateway/.swcrc
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/swcrc",
   "jsc": {
     "parser": {
       "syntax": "typescript",
@@ -20,5 +21,5 @@
     "lazy": false,
     "noInterop": false
   },
-  "sourceMaps": true
+  "sourceMaps": "inline"
 }
