--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
   },
   "devDependencies": {
     "chokidar-cli": "^3.0.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.54.0",
     "eslint-config-discordeno": "*",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.0",
-    "prettier": "^3.0.3",
-    "turbo": "latest",
-    "typedoc": "^0.23.26",
-    "typedoc-plugin-markdown": "^3.14.0",
-    "typescript": "^4.9.5"
+    "lint-staged": "^13.3.0",
+    "prettier": "^3.1.0",
+    "turbo": "^1.10.16",
+    "typedoc": "^0.23.28",
+    "typedoc-plugin-markdown": "^3.17.1",
+    "typescript": "^5.3.2"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -50,6 +50,6 @@
   },
   "packageManager": "yarn@3.6.4",
   "dependencies": {
-    "typedoc-plugin-missing-exports": "^1.0.0"
+    "typedoc-plugin-missing-exports": "^2.1.0"
   }
 }
