--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,13 +1,13 @@
+afterInstall: yarn run setup-dd
+
+compressionLevel: mixed
+
+enableGlobalCache: false
+
 nodeLinker: node-modules
 
 plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: '@yarnpkg/plugin-typescript'
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: '@yarnpkg/plugin-interactive-tools'
   - path: .yarn/plugins/@yarnpkg/plugin-after-install.cjs
-    spec: 'https://raw.githubusercontent.com/mhassan1/yarn-plugin-after-install/v0.5.0/bundles/@yarnpkg/plugin-after-install.js'
+    spec: "https://raw.githubusercontent.com/mhassan1/yarn-plugin-after-install/v0.5.0/bundles/@yarnpkg/plugin-after-install.js"
 
-yarnPath: .yarn/releases/yarn-3.6.4.cjs
-
-afterInstall: yarn run setup-dd
+yarnPath: .yarn/releases/yarn-4.0.2.cjs
