--- a/packages/benchmark/package.json
+++ b/packages/benchmark/package.json
@@ -42,6 +42,6 @@
     "eslint-config-discordeno": "*",
     "ts-node": "^10.9.1",
     "tsconfig": "*",
-    "typescript": "^5.3.2"
+    "typescript": "5.2.2"
   }
 }
