--- a/packages/discordeno/package.json
+++ b/packages/discordeno/package.json
@@ -51,6 +51,6 @@
     "sinon": "^17.0.1",
     "ts-node": "^10.9.1",
     "tsconfig": "*",
-    "typescript": "^5.3.2"
+    "typescript": "5.2.2"
   }
 }
