--- a/packages/eslint-config-discordeno/package.json
+++ b/packages/eslint-config-discordeno/package.json
@@ -14,7 +14,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-require-extensions": "^0.1.3",
-    "typescript": "^5.3.2"
+    "typescript": "5.2.2"
   },
   "publishConfig": {
     "access": "public"
