--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -49,7 +49,7 @@
     "sinon": "^17.0.1",
     "ts-node": "^10.9.1",
     "tsconfig": "*",
-    "typescript": "^5.3.2",
+    "typescript": "5.2.2",
     "uWebSockets.js": "https://github.com/uNetworking/uWebSockets.js.git#commit=42c9c0d5d31f46ca4115dc75672b0037ec970f28"
   }
 }
