--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -51,7 +51,7 @@
     "sinon": "^17.0.1",
     "ts-node": "^10.9.1",
     "tsconfig": "*",
-    "typescript": "^5.3.2",
+    "typescript": "5.2.2",
     "why-is-node-running": "^2.2.2"
   }
 }
