--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -40,6 +40,6 @@
     "mocha": "^10.2.0",
     "ts-node": "^10.9.1",
     "tsconfig": "*",
-    "typescript": "^5.3.2"
+    "typescript": "5.2.2"
   }
 }
