--- a/website/package.json
+++ b/website/package.json
@@ -18,34 +18,34 @@
     "setup-dd": ""
   },
   "dependencies": {
-    "@babel/plugin-syntax-flow": "^7.18.6",
-    "@docusaurus/core": "2.3.1",
-    "@docusaurus/preset-classic": "2.3.1",
+    "@babel/plugin-syntax-flow": "^7.23.3",
+    "@docusaurus/core": "2.4.3",
+    "@docusaurus/preset-classic": "2.4.3",
     "@easyops-cn/docusaurus-search-local": "^0.34.0",
     "@mdx-js/react": "^1.6.22",
-    "babel-plugin-styled-components": "^2.1.1",
-    "chart.js": "^4.2.1",
+    "babel-plugin-styled-components": "^2.1.4",
+    "chart.js": "^4.4.0",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.3.1",
-    "@tsconfig/docusaurus": "^1.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@docusaurus/module-type-aliases": "2.4.3",
+    "@tsconfig/docusaurus": "^1.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "prettier": "^2.8.7",
-    "typescript": "^4.9.5"
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^2.8.8",
+    "typescript": "5.2.2"
   },
   "browserslist": {
     "production": [
