--- a/website/package.json
+++ b/website/package.json
@@ -19,24 +19,22 @@
   },
   "dependencies": {
     "@babel/plugin-syntax-flow": "^7.23.3",
-    "@docusaurus/core": "3.0.0",
-    "@docusaurus/preset-classic": "3.0.0",
+    "@docusaurus/core": "2.4.3",
+    "@docusaurus/preset-classic": "2.4.3",
     "@easyops-cn/docusaurus-search-local": "^0.34.0",
-    "@mdx-js/react": "^3.0.0",
+    "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^2.1.4",
     "chart.js": "^4.4.0",
     "clsx": "^1.2.1",
-    "prism-react-renderer": "^2.1.0",
-    "react": "^18.2.0",
+    "prism-react-renderer": "^1.3.5",
+    "react": "^17.0.2",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.0.0",
-    "@docusaurus/tsconfig": "3.0.0",
-    "@docusaurus/types": "3.0.0",
-    "@types/react": "^18.2.29",
+    "@docusaurus/module-type-aliases": "2.4.3",
+    "@tsconfig/docusaurus": "^1.0.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.54.0",
@@ -62,6 +60,6 @@
     ]
   },
   "engines": {
-    "node": ">=18.0"
+    "node": ">=16.14"
   }
 }
