--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -7,7 +7,7 @@ name: Mark stale issues and pull requests
 
 on:
   schedule:
-  - cron: '0 0 1 * *'
+  - cron: '0 0 * * 1'
 
 jobs:
   stale:
@@ -25,3 +25,5 @@ jobs:
         stale-pr-message: 'This pull request has gone stale for over a month. If this pull request is still useful, leave a comment below. Otherwise, it will be closed shortly.'
         stale-issue-label: 'no-issue-activity'
         stale-pr-label: 'no-pr-activity'
+        exempt-issue-labels: 'api-docs-commits,[HELP WANTED] good first issue'
+        close-issue-reason: 'not_planned'
