feat: add DD team with DD core to codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-*                          @Skillz4Killz @itohatweb
+*                          @discordeno/team @discordeno/core
 
 /.github/workflows/        @H01001000
 /.github/sync.yml          @H01001000
