--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-*                          @discordeno/team @discordeno/core
+*                          @discordeno/team @Skillz4Killz @itohatweb
 
 /.github/workflows/        @H01001000
 /.github/sync.yml          @H01001000
