--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,6 @@
 *                          @discordeno/team @Skillz4Killz @itohatweb
 
+/.github/CODEOWNERS        @Skillz4Killz @itohatweb
 /.github/workflows/        @H01001000
 /.github/sync.yml          @H01001000
 /.yarn/                    @H01001000
