--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-*                          @discordeno/team @Skillz4Killz @itohatweb
+*                          @H01001000 @Fleny113 @MatthewSH @Skillz4Killz @itohatweb
 
 /.github/CODEOWNERS        @Skillz4Killz @itohatweb
 /.github/workflows/        @H01001000
