feat: add individuals to codeowners (#3201)
* feat: add DD team with DD core to codeowners

* fix: revert back to Skillz and Itoh directly for now

core team is missing write permissions

* feat: only allow Skillz and Itoh to make CODEOWNER changes

* feat: add H0, Fleny, and Matt to CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,6 @@
-*                          @Skillz4Killz @itohatweb
+*                          @H01001000 @Fleny113 @MatthewSH @Skillz4Killz @itohatweb
 
+/.github/CODEOWNERS        @Skillz4Killz @itohatweb
 /.github/workflows/        @H01001000
 /.github/sync.yml          @H01001000
 /.yarn/                    @H01001000
