--- a/packages/discordeno/package.json
+++ b/packages/discordeno/package.json
@@ -4,10 +4,10 @@
   "main": "./dist/esm/index.js",
   "exports": {
     "import": "./dist/esm/index.js",
-    "require": "./dist/cjs/index.js",
+    "require": "./dist/cjs/index.cjs",
     "types": "./dist/types/index.d.ts"
   },
-  "bin": "./bin/disocrdeno.js",
+  "bin": "./bin/discordeno.js",
   "types": "./dist/types/index.d.ts",
   "type": "module",
   "license": "Apache-2.0",
@@ -34,7 +34,8 @@
     "@discordeno/rest": "19.0.0-alpha.1",
     "@discordeno/types": "19.0.0-alpha.1",
     "@discordeno/utils": "19.0.0-alpha.1",
-    "commander": "^11.0.0"
+    "commander": "^11.0.0",
+    "read-package-up": "^11.0.0"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
