--- a/packages/benchmark/package.json
+++ b/packages/benchmark/package.json
@@ -24,7 +24,7 @@
     "bench": "node dist/index.js"
   },
   "dependencies": {
-    "@discordeno/bot": "latest",
+    "@discordeno/bot": "19.0.0-alpha.1",
     "@discordeno/gateway": "19.0.0-alpha.1",
     "@discordeno/rest": "19.0.0-alpha.1",
     "@discordeno/types": "19.0.0-alpha.1",
