--- a/website/package.json
+++ b/website/package.json
@@ -37,6 +37,7 @@
     "@tsconfig/docusaurus": "^1.0.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "esbuild-loader": "^4.0.2",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
