--- a/website/package.json
+++ b/website/package.json
@@ -34,10 +34,10 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.3",
+    "@swc/core": "^1.3.100",
     "@tsconfig/docusaurus": "^1.0.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "esbuild-loader": "^4.0.2",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -46,6 +46,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^2.8.8",
+    "swc-loader": "^0.2.3",
     "typescript": "5.2.2"
   },
   "browserslist": {
