--- a/website/package.json
+++ b/website/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "reactflow": "^11.10.1",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
