Revert "Fix the TS error in transformers benchmark (#3261)"
This reverts commit 721b8a82f6186e3a9bdb2b42c53e8ae4694b41a1.

--- a/packages/benchmark/package.json
+++ b/packages/benchmark/package.json
@@ -24,7 +24,7 @@
     "bench": "node dist/index.js"
   },
   "dependencies": {
-    "@discordeno/bot": "19.0.0-alpha.1",
+    "@discordeno/bot": "latest",
     "@discordeno/gateway": "19.0.0-alpha.1",
     "@discordeno/rest": "19.0.0-alpha.1",
     "@discordeno/types": "19.0.0-alpha.1",
