--- a/packages/discordeno/package.json
+++ b/packages/discordeno/package.json
@@ -29,11 +29,11 @@
     "test:test-type": "tsc --project tsconfig.test.json"
   },
   "dependencies": {
-    "@discordeno/bot": "19.0.0-alpha.1",
+    "@discordeno/bot": "19.0.0-beta.1",
     "@discordeno/gateway": "19.0.0-alpha.1",
     "@discordeno/rest": "19.0.0-alpha.1",
-    "@discordeno/types": "19.0.0-alpha.1",
-    "@discordeno/utils": "19.0.0-alpha.1",
+    "@discordeno/types": "19.0.0-beta.1",
+    "@discordeno/utils": "19.0.0-beta.1",
     "commander": "^11.1.0"
   },
   "devDependencies": {
