--- a/packages/benchmark/package.json
+++ b/packages/benchmark/package.json
@@ -24,11 +24,11 @@
     "bench": "node dist/index.js"
   },
   "dependencies": {
-    "@discordeno/bot": "latest",
+    "@discordeno/bot": "19.0.0-beta.1",
     "@discordeno/gateway": "19.0.0-alpha.1",
     "@discordeno/rest": "19.0.0-alpha.1",
-    "@discordeno/types": "19.0.0-alpha.1",
-    "@discordeno/utils": "19.0.0-alpha.1",
+    "@discordeno/types": "19.0.0-beta.1",
+    "@discordeno/utils": "19.0.0-beta.1",
     "benchmark": "^2.1.4",
     "microtime": "^3.1.1",
     "node-fetch": "^3.3.2"
