--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -29,8 +29,8 @@
     "test:test-type": "tsc --project tsconfig.test.json"
   },
   "dependencies": {
-    "@discordeno/types": "19.0.0-alpha.1",
-    "@discordeno/utils": "19.0.0-alpha.1",
+    "@discordeno/types": "19.0.0-beta.1",
+    "@discordeno/utils": "19.0.0-beta.1",
     "ws": "^8.14.2"
   },
   "devDependencies": {
