--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -30,8 +30,8 @@
     "test:test-type": "tsc --project tsconfig.test.json"
   },
   "dependencies": {
-    "@discordeno/types": "19.0.0-alpha.1",
-    "@discordeno/utils": "19.0.0-alpha.1",
+    "@discordeno/types": "19.0.0-beta.1",
+    "@discordeno/utils": "19.0.0-beta.1",
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
