--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@discordeno/utils",
-  "version": "19.0.0-alpha.1",
+  "version": "19.0.0-beta.1",
   "main": "./dist/esm/index.js",
   "exports": {
     "import": "./dist/esm/index.js",
@@ -29,7 +29,7 @@
     "test:test-type": "tsc --project tsconfig.test.json"
   },
   "dependencies": {
-    "@discordeno/types": "19.0.0-alpha.1",
+    "@discordeno/types": "19.0.0-beta.1",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
