ci: fix labeler workflow (#3303)
* ci: fix labeler workflow

* fix syntax

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -24,5 +24,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
-          NUMBER: ${{ github.event.issue.number }}
+          NUMBER: ${{ github.event.pull_request.number || github.event.issue.number }}
           LABELS: w-unverified
